<resources>
    <string name="app_name">Hemapp</string>
    <string name="Title_Doadores">Doadores</string>
    <string name="Title_Top_Doadores">Top Doadores</string>
    <string name="Title_Campanhas">Campanhas</string>
    <string name="numero_bolsas">%d</string>
    <string name="numero_doacoes">%d</string>
    <string name="adicionr_doador">Adicionar Doador</string>
    <string name="tiposangue_text">Tipo Sanguíneo</string>
    <string name="telefone_text">Telefone</string>
    <string name="Endereco_text">Endereço</string>
    <string name="menu_Doacoes">Doações</string>
    <string name="menu_Doadores">Doadores</string>
    <string name="menu_Estoque">Estoque de Bolsas</string>
    <string name="n_bolsas_text">Número de Bolsas</string>
    <string-array name="sexo_array">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string-array name="tiposangue_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="sexo_M">Masculino</string>
    <string name="sexo_F">Feminino</string>
    <string name="sexo_text">Sexo</string>
    <string name="nome_doador">Nome</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_Campanhas">Campanhas</string>
    <string name="menu_Top_Doadores">Top Doadores</string>
    <string name="CPF_text">CPF</string>
    <string name="complete_data">Por favor, complete os dados</string>
    <string name="success">Dados enviados com sucesso</string>
    <string name="doador_text">Doador</string>
    <string name="campanha_text">Campanha</string>
    <string name="hora_doacao_text">Hora</string>
    <string name="data_doacao_text">Data</string>
    <string name="registrar_doacao">Registrar doação</string>
    <string name="estoque_menu_text">Estoque</string>
    <string name="hospital_text">Sobre o hospital</string>
    <string name="Title_Nova_Doacao">Nova Doaçao</string>
    <string name="Title_Novo_doador">Novo Doador</string>
    <string name="alvo_text">Alvo (Hospital ou Paciente específico)</string>
    <string name="nome_campanha_text">Nome da Campanha</string>
    <string name="descricao_text">Descrição</string>
    <string name="Title_nova_campanha">Nova Campanha</string>
    <string name="remover_pop_text">Remover?</string>
    <string name="removido_text">Removido.</string>

</resources>
