<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lunatic.hemapp.AddDoacaoFormActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/ac_Doador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/doador_text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:padding="8dp"
        android:textSize="16sp"
        android:id="@+id/tv_Tipo_Sangue_Doacao"
        android:hint="@string/tiposangue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="8dp"
        android:textSize="16sp"
        android:id="@+id/tv_Sexo_Doacao"
        android:hint="@string/sexo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_nbolsas"
            android:hint="@string/n_bolsas_text"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/ac_Campanha"
            android:hint="@string/campanha_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/ed_alvo_doacao"
        android:hint="@string/alvo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/hora_doacao"
        android:padding="8dp"
        android:hint="@string/hora_doacao_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:padding="8dp"
        android:id="@+id/data_doacao"
        android:hint="@string/data_doacao_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/add_doacao_button"
        android:text="@string/registrar_doacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
