<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lunatic.hemapp.AddDoadorFormActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edNome_Doador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_doador"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edEmail_Doador"
            android:hint="E-Mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edTelefone_Doador"
            android:hint="@string/telefone_text"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edEndereco_Doador"
            android:hint="@string/Endereco_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edCPF_Doador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CPF_text"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/tiposangue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_tiposangue_Doador"
        android:entries="@array/tiposangue_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:text="@string/sexo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinner_sexo_Doador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sexo_array"></Spinner>

    <Button
        android:id="@+id/addDoadorButton"
        android:text="@string/adicionr_doador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
